# greplike

./: .clang-format  .gitignore  CMakeLists.txt
lib/: CMakeLists.txt  search_engine.cpp  search_engine.h  spot.cpp  spot.h
src/: main.cpp
tests/: CMakeLists.txt  all_found.cpp  complex.cpp  dot.cpp  ends_with.cpp  none_found.cpp  star.cpp  starts_with.cpp  tests.h
tests/sandbox/shakespeare/: julius_caesar.txt  romeo_and_juliet.txt
tests/sandbox/shakespeare/unsorted/: quotes.txt
tool/: CMakeLists.txt  main.cpp
